bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-value-format.stderr
error: expected string literal
 --> tests/ui/error-unsupported-struct-value-format.rs:4:19
  |
4 | #[frompyo3(name = Resource)]
  |                   ^^^^^^^^
